# teleport-engine

./: .gitignore  CMakeLists.txt  README.md
Engine/: Buffer.hpp  Game.cpp  Game.hpp  Map.hpp  Math.cpp  Math.hpp  Player.hpp  Renderer.cpp  Renderer.hpp
Engine/Utils/: Clip.cpp  Clip.hpp  Math.cpp  Math.hpp  Utils.hpp  Vector.hpp  Worker.hpp
Game/: main.cpp
